// Vitest Snapshot v1

exports[`plugins/swc > should set swc minimizer in production 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/src/loader",
            "options": {
              "extensions": {
                "lockCorejsVersion": {
                  "corejs": "<HOME>/libs/modern.js/node_modules/<PNPM_INNER>/core-js",
                  "swcHelpers": "<HOME>/libs/modern.js/node_modules/<PNPM_INNER>/@swc/helpers",
                },
              },
              "swc": {
                "cwd": "<ROOT>",
                "env": {
                  "mode": "entry",
                  "targets": [
                    "> 0.01%",
                    "not dead",
                    "not op_mini all",
                  ],
                },
              },
            },
          },
        ],
      },
    ],
  },
  "optimization": {
    "minimizer": [
      SwcWebpackPlugin {
        "minifyOptions": {
          "compress": {},
          "mangle": true,
        },
      },
    ],
  },
}
`;

exports[`plugins/swc > should set swc-loader 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/src/loader",
            "options": {
              "extensions": {
                "lockCorejsVersion": {
                  "corejs": "<HOME>/libs/modern.js/node_modules/<PNPM_INNER>/core-js",
                  "swcHelpers": "<HOME>/libs/modern.js/node_modules/<PNPM_INNER>/@swc/helpers",
                },
              },
              "swc": {
                "cwd": "<ROOT>",
                "env": {
                  "mode": "entry",
                  "targets": [
                    "> 0.01%",
                    "not dead",
                    "not op_mini all",
                  ],
                },
              },
            },
          },
        ],
      },
    ],
  },
}
`;
